# glade

./: Makefile.am  configure.ac
data/: Makefile.am  adwaita-icon-theme.wxi  glade.wxs.in
plugins/: Makefile.am
